...
                    android:textSize="13sp"
                    android:textColor="?attr/epTextOnPrimary"
                    android:alpha="0.8"
                    android:layout_marginBottom="4dp" />

                <TextView
                    android:id="@+id/tvTiempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiempo_inicial"
                    android:textSize="52sp"
                    android:textColor="?attr/epTextOnPrimary"
                    android:textStyle="bold"
...
